# stratified_group_shuffle_split

./: LICENSE  README.md  TODO.md  pyproject.toml  split.py
.github/workflows/: python-package.yml
examples/: rational_learning_curve.py  rational_scores.py  rational_standard.py
stratified_group_shuffle_split/: __init__.py  split.py
tests/: test_split.py
validation/: visualization.py
